Debug: confirm billing JS loads

--- a/templates/billing.html
+++ b/templates/billing.html
@@ -159,6 +159,7 @@ let currentTotal = 0;
 
 /* ================= INIT ================= */
 window.onload = async () => {
+    alert("JS LOADED");
     await createCart();
     await loadMenu();
     await loadCart();
